<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateBeaconFragment">

    <!--        android:shadowColor="@color/black"-->
<!--        android:shadowDx="10"-->
<!--        android:shadowDy="10"-->
<!--        android:shadowRadius="15"-->

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/please_enter_in_the_following_information_of_the_beacon_you_want_to_update"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    <TextView-->
<!--        android:id="@+id/beacon1_name"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:text="Beacon name:"-->
<!--        android:textSize="16sp"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/beacon_number_text"-->
<!--        app:layout_constraintHorizontal_bias="0.177"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/Beacon1" />-->

    <!--    <EditText-->
<!--        android:id="@+id/beacon1_name_input"-->
<!--        android:layout_width="129dp"-->
<!--        android:layout_height="46dp"-->
<!--        android:layout_marginStart="32dp"-->
<!--        android:ems="10"-->
<!--        android:maxLength="20"-->
<!--        android:hint="Name"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/beacon1_name" />-->

    <!--    <TextView-->
<!--        android:id="@+id/beacon2_name"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Beacon Name:"-->
<!--        android:textSize="16sp"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/beacon_number_text"-->
<!--        app:layout_constraintHorizontal_bias="0.187"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/beacon2" />-->

    <TextView
        android:id="@+id/beacon_number_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/first_beacon_number"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/beacon_number_edit"
        android:layout_width="129dp"
        android:layout_height="46dp"
        android:layout_marginStart="60dp"
        android:ems="10"
        android:hint="Beacon ID"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/beacon_number_text" />

    <EditText
        android:id="@+id/beacon_number_edit_2"
        android:layout_width="129dp"
        android:layout_height="46dp"
        android:ems="10"
        android:hint="Beacon ID"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/beacon_number_2_text" />


<!--    <EditText-->
<!--        android:id="@+id/beacon2_name_input"-->
<!--        android:layout_width="129dp"-->
<!--        android:layout_height="46dp"-->
<!--        android:layout_marginStart="32dp"-->
<!--        android:ems="10"-->
<!--        android:hint="Name"-->
<!--        android:maxLength="20"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/beacon2_name" />-->

    <TextView
        android:id="@+id/beacon_number_2_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/second_beacon_number"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/beacon_number_edit" />

    <Button
        android:id="@+id/button_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/update_path"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>